src/test/resources/private/typechecking/pass/this/this_01_member.jova
class Test{
    private int x;

    public int test() {
        return this.x;
    }
}