src/test/resources/private/typechecking/fail/main_structure/fail07_mainAsCtorParam.jova
class Main {
}

class Helper {
}

class Test {
    public int a;
    public string b;

    Test(char param0, Helper param1, Main param2 ) {
    }
}